Wed Apr 13 16:54:52 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>

        * dance/NodeManager/NodeManager_Impl.cpp:
        * dance/Plan_Launcher/Plan_Launcher_Base_Impl_T.h:
        * dance/Plan_Launcher/Plan_Launcher_Base_Impl_T.cpp:

          gen_ostream fixes.

Wed Apr 13 13:54:11 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * tests/LocalityManager/CircularDependency/CircularDependency.mpc:

          Don't attempt to put the library in $ACE_ROOT/lib.
          Fixed missing end-of-file newline.

Wed Apr 13 11:52:01 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>

        * dance/Plan_Launcher/Plan_Launcher_Base_Impl_T.cpp:

          Compile fix.

Tue Apr 12 11:44:20 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>

        * tests/LocalityManager/CircularDependency/Circular_Dependency_export.h:
        * tests/LocalityManager/CircularDependency/Handler_A.h:
        * tests/LocalityManager/CircularDependency/Handler_B.h:

          Renamed the export file to avoid a spurious fuzz error.

        * tests/LocalityManager/CircularDependency/CircularDependency_export.h:

          Removed this file.

Tue Apr 12 01:16:47 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>

        * tests/LocalityManager/CircularDependency/Handler_A.cpp:
        * tests/LocalityManager/CircularDependency/Handler_B.cpp:

          Warnings.

Mon Apr 11 11:13:10 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>

        * MPC/config/dance_plan_launcher.mpb:

          Link fix.

Mon Apr 11 03:00:40 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>

        * tests/LocalityManager/CircularDependency:
        * tests/LocalityManager/CircularDependency/CircularDependency.mpc:
        * tests/LocalityManager/CircularDependency/CircularDependency_export.h:
        * tests/LocalityManager/CircularDependency/Deployment.cdp:
        * tests/LocalityManager/CircularDependency/Handler_A.h:
        * tests/LocalityManager/CircularDependency/Handler_A.cpp: