@@ -1,3 +1,10 @@
+Thu Apr 14 14:05:16 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>
+
+        * dance/Logger/Logger_Service.cpp:
+        * dance/Plan_Launcher/Plan_Launcher_Base_Impl_T.cpp:
+
+          Errors.
+
 Wed Apr 13 16:54:52 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>
 
         * dance/NodeManager/NodeManager_Impl.cpp:
